[package]
name = "sakura"
version = "0.1.0"
authors = ["emma bridgers <emma@miwa.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0"
reqwest = { version = "0.11.3", features = ["json"] }
sqlx = { version = "^0.5", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "sqlite", "chrono", "json" ] }
chrono = "0.4.19"
serde = "1.0.125"
serde_json = "1.0.64"

[dependencies.tokio]
version = "^1"
features = ["full"]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json"]
