[package]
name = "sakura"
version = "0.1.0"
authors = ["emma bridgers <emma@miwa.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0"
reqwest = { version = "0.11.3", features = ["json"] }
sqlx = { version = "^0.5", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "sqlite", "chrono", "json", "offline" ] }
chrono = { version = "0.4.9", features = ["serde"]}
serde = "1.0.125"
serde_json = "1.0.64"
slug = "0.1.4"
regex = "1.5.4"
harsh = "0.2.1"
url = "2.2.2"
rand = "0.8.4"
ring = "0.16.20"
convert-base = "1.1.2"
base64 = "0.13.0"
urlencoding = "2.1.0"
oauth = { version = "0.5", package = "oauth1-request" }

[dependencies.tokio]
version = "^1"
features = ["full"]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json"]
